# TinyStepperClock

./: .gitignore  .gitmodules  README.md
FreeCAD/: ClockFace.FCStd  DialPlate.FCStd  TinyStepperClock.FCStd
KiCAD/: CustomSymbols.kicad_sym  TinyStepperClock.kicad_pcb  TinyStepperClock.kicad_prl  TinyStepperClock.kicad_pro  TinyStepperClock.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
KiCAD/CustomFootprints.pretty/: DRV8833_Breakout.kicad_mod
RP2040/: CMakeLists.txt  PWM.c  PWM.h  RTC.c  RTC.h  Stepper.c  Stepper.h  TinyStepperClock.c  WS2812.c  WS2812.h
